<resources>
    <string name="app_name">MINI CRM</string>
    <string name="logo" />
    <string name="create_task">Create Task</string>
    <string name="clear_tasks">Clear Tasks</string>
    <string name="make_offer">Make Offer</string>
    <string name="update_task">Update Task</string>
    <string name="dashboard">Dashboard</string>
    <string name="calculate_plan_input">Calculate Plan Input</string>
    <string name="search">Search</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="don_t_have_an_account_register_here">Don\'t have an account? Register here</string>
    <string name="login">Login</string>
    <string name="emaill">Email</string>
    <string name="clear_task" />
    <string name="employee_task_create">Employee Task Create</string>
    <string name="task_information">Task Information</string>


    <string name="admin_dashboard">Admin Dashboard</string>
    <string name="check_logs">Check Logs</string>
    <string name="assign_tasks">Assign Tasks</string>
    <string name="view_e_signature_tasks">View Tasks Requiring E-Signature</string>
    <string name="download_task_info">Download Task Information</string>

    <string name="default_web_client_id">509644688060-nm7eha2ub3hlqsbuuh2itaftdljj9535.apps.googleusercontent.com</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
    <!-- Other strings -->


</resources>

