<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/black">

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="364dp"
        android:layout_height="241dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/minicrm" />

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/logo_image"
        android:layout_marginTop="32dp"
        android:hint="@string/emaill"
        android:inputType="textEmailAddress"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextUsername"
        android:layout_marginTop="16dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:background="@drawable/rounded_edittext"
        android:padding="12dp"
        android:autofillHints="" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextPassword"
        android:layout_marginTop="24dp"
        android:backgroundTint="@color/gradientStart"
        android:padding="12dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/CustomButtonStyle"/>

    <TextView
        android:id="@+id/textViewRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/don_t_have_an_account_register_here"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:textSize="18dp"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/textViewForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textColor="#FFFFFF"
        android:textStyle="italic"
        android:textSize="18dp"
        android:layout_below="@id/textViewRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btnGoogleSignIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewForgotPassword"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/backgroundColor"
        android:padding="12dp"
        android:textAllCaps="false"
        style="@style/CustomGoogleSignInButton" />

    <Button
        android:id="@+id/btnReportIssue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnGoogleSignIn"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/gradientStart"
        android:padding="12dp"
        android:text="Report Issue"
        android:textAllCaps="false"
        android:textColor="@color/white"
        style="@style/CustomButtonStyle"/>

</RelativeLayout>
